2010-07-16  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Try harder to catch PostInst-vs-UpdatePOD

2010-07-04  Dave Morrison  <drm@finkproject.org>

	* Config.pm: new functions &apt_tree_default and &fink_tree_default
	* Config.pm: &write_sources_list now calls &apt_tree_default
	* Bootstrap.pm: &add_injected_to_trees now takes $distribution
	as an argument, and calls Fink::Config::fink_tree_default
	* Bootstrap.pm: exit with message if new argument of 
	&add_injected_to_trees is absent

2010-06-30  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: note about an UpdatePOD problem
	* Validation.pm: Type:perl PostInst for UpdatePOD can break if no
	podfiles/ files in .deb

2010-06-27  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: pkgconfig misparses "-Xlinker" in .pc
	files (multiword flag, should use -Wl, instead)

2010-06-14  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: rename script_error() to package_error().
	Improve error-reporting if .deb val fails.

2010-06-15  Alexander Hansen <alexkhansen@users.sourceforge.net>

	* Bootstrap.pm:  Add OS 10.6.4 as a supported version.

2010-06-13  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: factor out new script_error() method from
	run_script(), make sure it runs after phase:test also.

2010-06-09  Daniel Johnson  <daniel@daniel-johnson.org>

	* NetAccess.pm: Add "aria2" as download method

2010-06-08  Daniel Macks  <dmacks@netspace.org>

	* Package.pm (get_all_providers): convert to named-parameters API,
	add option to give only highest-priority Tree for each %f that
	Provides a package.
	* PkgVersion.pm: resolver use get_all_providers option for
	single-Tree Provides instead of local implementation
	* Engine.pm: update to use new Package::get_all_providers syntax

2010-06-07  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: dependency resolver should only consider
	highest-priority Tree for each %f that Provides a package

2010-06-03  Daniel Macks  <dmacks@netspace.org>
