@@ -1,3 +1,7 @@
+2010-07-19  Daniel Macks  <dmacks@netspace.org>
+
+	* Configure.pm: Make sure Buildpath is absolute
+
 2010-07-16  Daniel Macks  <dmacks@netspace.org>
 
 	* Validation.pm: Try harder to catch PostInst-vs-UpdatePOD
@@ -8,7 +12,7 @@
 	* Config.pm: &write_sources_list now calls &apt_tree_default
 	* Bootstrap.pm: &add_injected_to_trees now takes $distribution
 	as an argument, and calls Fink::Config::fink_tree_default
-	* Bootstrap.pm: exit with message if new argument of 
+	* Bootstrap.pm: exit with message if new argument of
 	&add_injected_to_trees is absent
 
 2010-06-30  Daniel Macks  <dmacks@netspace.org>
